# revenue_analysis

./: .dockerignore  .env.example  .gitignore  API_INTEGRATION_GUIDE.md  Dockerfile  FRONTEND_INTEGRATION_GUIDE.md  RBAC_FLOW_DIAGRAM.md  RBAC_IMPLEMENTATION_GUIDE.md  RBAC_SETUP_GUIDE.md  README.md  Revenue_Guardian.postman_environment.json  Revenue_Guardian_API.postman_collection.json  docker-compose.yml  main.py  pyproject.toml  run.py
alembic/: env.py
alembic/versions/: 7ffccd7049bd_add_department_field_to_users_table.py  bc097dfdbfef_initial_tables.py  d4cd49a72ef7_add_audit_logs_table_with_error_logging_.py  d579786640c8_change_department_to_integer_type.py  e56b6967ef19_initial_tables.py  f73c84f68eb0_initial_tables.py
app/: __init__.py  api.py
app/core/: config.py  database.py  exceptions.py  response.py  security.py
app/crud/: audit_log.py  department.py  permission.py  user.py
app/dependencies/: auth.py
app/models/: __init__.py  audit_log.py  base.py  department.py  permission.py  registry.py  user.py
app/routers/: audit_logs.py  departments.py  health.py  permissions.py  users.py
app/routers/public/: __init__.py  auth.py
app/schemas/: audit_log.py  department.py  permission.py  user.py
app/scripts/: seed_permissions.py
app/services/: auth.py
app/utils/: audit.py  permissions.py
openspec/: project.md
openspec/changes/add-fastapi-backend-architecture/: design.md  tasks.md
openspec/changes/add-user-management-apis/: design.md  (+2 more)
scripts/: __init__.py  seed_admin_users.py  seed_departments.py
tests/: conftest.py  test_health.py
(+18 files in other folders)
